# u_powertrain

./: README.md  build.sh
python/: ev_simulation.py
qt/: CMakeLists.txt  assets.qrc  main.cpp  power_service.cpp  power_service.h  powergraph.cpp  powergraph.h  powertrain_simulator.cpp  powertrain_simulator.h  specviewer.cpp  specviewer.h  thermal_service.h  vehicle_dto.h
specs/: master_specification_v3.0.md
